<resources>
    <string name="app_name">Dvex</string>
    <string name="hello_login_no_user">Welcome Back, </string>
    <string name="welcome_login_no_user">Hello, </string>
    <string name="login_text_sign_up">Login</string>
    <string name="sign_up_text_sign_up">Sign Up</string>
    <string name="enter_your_information_below_text_sign_up">Enter your information below or login with a social account</string>
    <string name="email_address_btn_hint_text_sign_up">Email Address</string>
    <string name="password_btn_hint_text_sign_up">Password</string>
    <string name="forgot_password_text_sign_up">Forgot password?</string>
    <string name="btn_login_text_btn_sign_up">Login</string>
    <string name="email_address_text">Email Address</string>
    <string name="password_text">Password</string>
    <string name="forgot_password_text">Forgot password?</string>
    <string name="login_text">Login</string>
    <string name="continue_text">Continuar</string>
    <string name="example_user_name">Cristhian</string>
    <string name="required_text">*Requerido</string>
    <string name="btn_siguiente_text_btn_sign_up">Siguiente</string>
    <string name="hello_sign_up">Hola!</string>
    <string name="agree_terms_sign_up">Acepto los <a href="#">terminos y condiciones </a>de uso.</string>
    <string name="topt_sent_email_helper_text">Hemos enviado el código al email <b>email@example.com</b></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up_text">Sign Up</string>
</resources>